[package]
name = "udp2dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version="4.0.*",features=["derive"]}
log = "0.4.*"
env_logger = "0.9.*"
base64="0.13.*"
trust-dns-proto = "0.22.*"
rand = "*"